# cookiecutter-python

./: README.md  cookiecutter.json
cookiecutter-python/: pyproject.toml
cookiecutter-python/tests/: conftest.py
hooks/: post_gen_project.py
{{ cookiecutter.package_name }}/: .gitignore
{{ cookiecutter.package_name }}/src/{{ cookiecutter.package_name }}/: __init__.py
